unpackaged/main/default/objects/P21_Account_Details__c/P21_Account_Details__c.object-meta.xml
<CustomObject>
    <description>Contains information about P21 Customer mapped to an extension of an account</description>
    <label>P21 Account Details</label>
    <nameField>
        <label>P21 Account Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>P21 Account Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>