unpackaged/main/default/objects/P21_Account_Details__c/fields/AccountBillingState__c.field-meta.xml
<CustomField>
    <fullName>AccountBillingState__c</fullName>
    <description>State</description>
    <formula>AccountID__r.BillingState</formula>
    <inlineHelpText>State - Lookup to its Account</inlineHelpText>
    <label>Billing State</label>
    <type>Text</type>
</CustomField>