unpackaged/main/default/objects/P21_Account_Details__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Account</description>
    <label>AccountID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>P21 Account Details</relationshipLabel>
    <relationshipName>P21_Account_Details</relationshipName>
    <type>Lookup</type>
</CustomField>