unpackaged/main/default/objects/P21_Account_Details__c/fields/Override_Zipcode_Routing__c.field-meta.xml
<CustomField>
    <fullName>Override_Zipcode_Routing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will stop the P21 Account Owner from being Changed by automation.</inlineHelpText>
    <label>Override Zipcode Routing</label>
    <type>Checkbox</type>
</CustomField>