unpackaged/main/default/objects/P21_Account_Details__c/fields/P21_CustomerID__c.field-meta.xml
<CustomField>
    <fullName>P21_CustomerID__c</fullName>
    <externalId>true</externalId>
    <label>P21 CustomerID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>