unpackaged/main/default/objects/P21_Account_Details__c/fields/PartnerID__c.field-meta.xml
<CustomField>
    <fullName>PartnerID__c</fullName>
    <label>PartnerID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>