unpackaged/main/default/objects/P21_Account_Details__c/fields/Primary_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Zip_Code__c</fullName>
    <label>Primary Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>