unpackaged/main/default/objects/P21_Account_Details__c/fields/Sup_FirstDateSuppliesOrder__c.field-meta.xml
<CustomField>
    <fullName>Sup_FirstDateSuppliesOrder__c</fullName>
    <label>First Date of Supplies Order</label>
    <type>Date</type>
</CustomField>