unpackaged/main/default/objects/P21_Account_Details__c/fields/Sup_LastDateSuppliesOrder__c.field-meta.xml
<CustomField>
    <fullName>Sup_LastDateSuppliesOrder__c</fullName>
    <label>Last Date of Supplies Order</label>
    <type>Date</type>
</CustomField>