unpackaged/main/default/objects/P21_Account_Details__c/fields/Sup_TotalPotentialRevenue__c.field-meta.xml
<CustomField>
    <fullName>Sup_TotalPotentialRevenue__c</fullName>
    <label>Potential Supplies Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>