unpackaged/main/default/objects/P21_Account_Details__c/fields/Sup_TotalQuotedRevenue__c.field-meta.xml
<CustomField>
    <fullName>Sup_TotalQuotedRevenue__c</fullName>
    <label>Total Quoted Supplies Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>