unpackaged/main/default/objects/P21_Account_Details__c/fields/Sup_TotalRevenueLY__c.field-meta.xml
<CustomField>
    <fullName>Sup_TotalRevenueLY__c</fullName>
    <label>Last Year Job Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>