unpackaged/main/default/objects/P21_Account_Details__c/fields/Sup_TotalRevenueTY__c.field-meta.xml
<CustomField>
    <fullName>Sup_TotalRevenueTY__c</fullName>
    <label>This Year Job Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>