unpackaged/main/default/objects/P21_Account_Details__c/fields/XometryInternalAccount__c.field-meta.xml
<CustomField>
    <fullName>XometryInternalAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if it is a P21 internal account (Xometry, BBS, etc).</description>
    <label>Xometry Internal Account</label>
    <type>Checkbox</type>
</CustomField>