unpackaged/main/default/objects/P21_Account_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountID__c</columns>
    <columns>PartnerID__c</columns>
    <columns>Primary_Zip_Code__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>AccountBillingState__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>