unpackaged/main/default/objects/P21_Account_Details__c/listViews/MarketCaliP21Account.listView-meta.xml
<ListView>
    <fullName>MarketCaliP21Account</fullName>
    <columns>NAME</columns>
    <columns>AccountID__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>P21_CustomerID__c</columns>
    <columns>Primary_Zip_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AccountBillingState__c</field>
        <operation>equals</operation>
        <value>California</value>
    </filters>
    <label>[Market] Cali P21 Account</label>
</ListView>