unpackaged/main/default/objects/P21_Account_Details__c/listViews/MarketMichaelsAccount.listView-meta.xml
<ListView>
    <fullName>MarketMichaelsAccount</fullName>
    <columns>NAME</columns>
    <columns>Primary_Zip_Code__c</columns>
    <columns>AccountID__c</columns>
    <columns>AccountBillingState__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Michael</value>
    </filters>
    <label>[Market]Michael's Account</label>
    <sharedTo>
        <roleAndSubordinatesInternal>SellerMarketplace</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>